# agent-platform

./: README.md  docker-compose.yml  pyproject.toml
src/agent_platform/api/: app.py
src/agent_platform/executor/: executor.py  worker.py
src/agent_platform/memory/: store.py
src/agent_platform/planner/: dag.py  planner.py
src/agent_platform/tools/: crm_tool.py  email_tool.py  registry.py  web_search.py
tests/: conftest.py  test_api.py  test_dag.py  test_executor.py  test_memory_store.py  test_planner.py  test_tools.py
